atualizações catalogo de produtos

--- a/contact.html
+++ b/contact.html
@@ -187,7 +187,7 @@
                   <span class="wpcf7-form-control-wrap your-message"><textarea name="your-message" cols="40" rows="10" class="wpcf7-form-control wpcf7-textarea" aria-invalid="false" placeholder="Deixe sua mensagem"></textarea></span>
                 </div>
                 <div class="small-12 large-12 columns text-center">
-                  <input type="submit" value="Send" class="wpcf7-form-control wpcf7-submit button small"><span class="ajax-loader"></span>
+                  <input type="submit" value="ENVIAR" class="wpcf7-form-control wpcf7-submit button small"><span class="ajax-loader"></span>
                 </div>
               </form>
             </div>
@@ -265,8 +265,8 @@
             <div class="wd-newsletter">
               Assine seu boletim informativo
               <div>
-                <input type="text" class="email-adress" placeholder="EMAIL ADRESS" size="20" value="" name="email-adress">
-                <input type="submit" class="newslettersubmit" value="GO">
+                <input type="text" class="email-adress" placeholder="Seu E-mail" size="20" value="" name="email-adress">
+                <input type="submit" class="newslettersubmit" value="ENVIAR">
                 <ul class="inline-list">              
                   <li class="facebook">
                     <a href="https://www.facebook.com/Alfasuportel/"><i class="fa fa-facebook"></i></a>
