--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
                 <a href="#" class="has-icon">CHURRASQUEIRAS</a>
                 <ul class="sub-menu dropdown"><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="#">Estilo I</a></li>
                   <li id="menu-item-1317">
-                    <a href="portfolio-columns.html" class="has-icon">Catalogo Colunas</a>
+                    <a href="single-portfolio.html" class="has-icon">Catalogo Colunas</a>
                   </li>
                   <li id="menu-item-1316">
-                    <a href="portfolio-three-columns.html" class="has-icon">Catalogo 3 Colunas</a>
+                    <a href="single-portfolio.html" class="has-icon">Catalogo 3 Colunas</a>
                   </li>
                   <li id="menu-item-1315">
-                    <a href="portfolio-two.html" class="has-icon">Catalogo 2 Columns</a>
+                    <a href="single-portfolio.html" class="has-icon">Catalogo 2 Columns</a>
                   </li>
                 </ul>
               </li>
@@ -70,13 +70,13 @@
                   </li>
                   <li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="#">Estilo II</a></li>
                   <li id="menu-item-1319">
-                    <a href="portfolio-style-ii-two-columns.html" class="has-icon">Catalogo Estilo II  Colunas</a>
+                    <a href="single-portfolio.html" class="has-icon">Catalogo Estilo II  Colunas</a>
                   </li>
                   <li id="menu-item-1320">
-                    <a href="portfolio-style-ii-three-columns.html" class="has-icon">Catalogo Estilo II 3 Colunas</a>
+                    <a href="single-portfolio.html" class="has-icon">Catalogo Estilo II 3 Colunas</a>
                   </li>
                   <li id="menu-item-1321">
-                    <a href="portfolio-style-2-four-columns.html" class="has-icon">Catalogo Estilo II 4 Colunas</a>
+                    <a href="single-portfolio.html" class="has-icon">Catalogo Estilo II 4 Colunas</a>
                   </li>
                 </ul>
               </li>
@@ -157,7 +157,7 @@
         <li style="background-image: url('images/slider/slide1.jpg');">
           <div class="row">
             <div class="slider-caption">
-              <h1>Nós fornecemos os melhores produtos e materiais com ótima qualidade.</h1>
+              <h1 class="h1.slider">Nós fornecemos os melhores produtos e materiais com ótima qualidade.</h1>
               <p>Nós tornamos prioritário oferecer serviços flexíveis para atender suas necessidades</p>
               <a href="#">Obter uma cotação agora</a>
             </div>
@@ -338,59 +338,6 @@
   </section>
 
   <!-- End Call To Action -->
-
-  <!-- Start Our Projects -->
-
-  <section class="projects">
-    <div class="row">
-      <div class="small-12 large-8 large-offset-2 columns">
-        <div class="wd-title-section_c">
-          <h2>Ultimos Projetos</h2>
-          <h5>Nossa empresa busca sempre manter a qualidade tanto em seus produtos como no seu atendimento junto aos seus clientes , criando assim um elo de confiança e credibilidade . mantendo a marca da empresa sempre forte .</h5>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="small-12 large-12 columns">
-        <div class="wd-section-project">
-          <ul class="masque portfolio-grid small-block-grid-1	medium-block-grid-2 large-block-grid-3">
-            <li class="animated fadeInUp" data-animated="fadeInUp">
-              <div class="wd-project hvr-underline-from-center">
-                <img width="380" height="254" src="images/slider/slide2.jpg" class="attachment-flooring_portfolio size-flooring_portfolio wp-post-image" alt="">
-                <a href="single-portfolio.html">
-                  <h4>Churrasco com amigos</h4>
-                </a>
-                <p> DESIGN<span>- </span>  INTERIOR<span>- </span>  OFFICE<span>- </span> </p>
-              </div>
-            </li>
-            <li class="animated fadeInUp" data-animated="fadeInUp">
-              <div class="wd-project hvr-underline-from-center">
-                <img width="380" height="254" src="images/slider/slide3.jpg" class="attachment-flooring_portfolio size-flooring_portfolio wp-post-image" alt="">
-                <a href="single-portfolio.html"><h4>Churrasco Social</h4></a>
-                <p> DESIGN<span>- </span>INTERIOR<span>- </span>  OFFICE<span>- </span> </p>
-              </div>
-            </li>
-            <li class="animated fadeInUp" data-animated="fadeInUp">
-              <div class="wd-project hvr-underline-from-center">
-                <img width="380" height="254" src="images/slider/slide1.jpg" class="attachment-flooring_portfolio size-flooring_portfolio wp-post-image" alt="">
-                <a href="single-portfolio.html">
-                  <h4>Almoço com a Familia</h4>
-                </a>
-                <p> DESIGN<span>- </span>INTERIOR<span>- </span>  OFFICE<span>- </span> </p>
-              </div>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="small-12 large-12 columns text-center">
-        <div class="wd-more-project flipInX" data-animated="flipInX"><a class="button small radius" href="portfolio-columns.html"><i class="fa fa-hand-o-right"></i>MAIS PROJETOS</a></div>
-      </div>
-    </div>
-  </section>
-
-  <!-- End Our Projects -->
 
   <!-- Start Our Clients & Free Quotes -->
 
