--- a/portfolio-columns.html
+++ b/portfolio-columns.html
@@ -171,7 +171,7 @@
     <div class="row">
       <div class="small-12 large-12 columns">
         <div class="wd-section-project">
-          <ul class="masque portfolio-grid small-block-grid-1	medium-block-grid-2 large-block-grid-4">
+          <ul class="slider masque portfolio-grid small-block-grid-1	medium-block-grid-2 large-block-grid-4">
             <li>
               <div class="wd-project hvr-underline-from-center">
                 <img width="380" height="254" src="http://via.placeholder.com/380x254" class="attachment-flooring_portfolio size-flooring_portfolio wp-post-image" alt="">					<a href="single-portfolio.html"><h4>Swedish Mega Project</h4></a>
