--- a/single-portfolio.html
+++ b/single-portfolio.html
@@ -179,6 +179,9 @@
           <li> 02 Pés de arame cromado desmontável.</li>
           <li>02 Apoios de grelha desmontável.</li>
           <li>01 Cuba de aço pintada.</li>
+          <div class="small-12 large-6 columns">
+            <h6></h6>
+          </div>
         </p>
       </div>
     </div>
