--- a/about-us.html
+++ b/about-us.html
@@ -14,13 +14,11 @@
     <link rel="stylesheet" href="stylesheets/app.css">
     <link rel="stylesheet" href="stylesheets/custom-style.css">
     <link rel="stylesheet" href="stylesheets/header.css">
-    <link rel="stylesheet" href="stylesheets/header.css">
+    <link rel="stylesheet" href="stylesheets/sections.css">
     <link rel="icon" href="images/logo/logo alfa suportel .png" width="140" height="140">
   </head>
   <body>
-
     <!-- Start Header -->
-
     <header class="l-header creative-layout">
       <div class="top-bar-container contain-to-grid sticky">
         <nav class="top-bar" data-topbar="">
@@ -47,13 +45,13 @@
                       <a href="#" class="has-icon">CHURRASQUEIRAS</a>
                       <ul class="sub-menu dropdown"><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="#">Estilo I</a></li>
                         <li id="menu-item-1317">
-                          <a href="portfolio-columns.html" class="has-icon">Catalogo Colunas</a>
+                          <a href="single-portfolio.html" class="has-icon">Catalogo Colunas</a>
                         </li>
                         <li id="menu-item-1316">
-                          <a href="portfolio-three-columns.html" class="has-icon">Catalogo 3 Colunas</a>
+                          <a href="single-portfolio.html" class="has-icon">Catalogo 3 Colunas</a>
                         </li>
                         <li id="menu-item-1315">
-                          <a href="portfolio-two.html" class="has-icon">Catalogo 2 Columns</a>
+                          <a href="single-portfolio.html" class="has-icon">Catalogo 2 Columns</a>
                         </li>
                       </ul>
                     </li>
@@ -67,13 +65,13 @@
                         </li>
                         <li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="#">Estilo II</a></li>
                         <li id="menu-item-1319">
-                          <a href="portfolio-style-ii-two-columns.html" class="has-icon">Catalogo Estilo II  Colunas</a>
+                          <a href="single-portfolio.html" class="has-icon">Catalogo Estilo II  Colunas</a>
                         </li>
                         <li id="menu-item-1320">
-                          <a href="portfolio-style-ii-three-columns.html" class="has-icon">Catalogo Estilo II 3 Colunas</a>
+                          <a href="single-portfolio.html" class="has-icon">Catalogo Estilo II 3 Colunas</a>
                         </li>
                         <li id="menu-item-1321">
-                          <a href="portfolio-style-2-four-columns.html" class="has-icon">Catalogo Estilo II 4 Colunas</a>
+                          <a href="single-portfolio.html" class="has-icon">Catalogo Estilo II 4 Colunas</a>
                         </li>
                       </ul>
                     </li>
@@ -160,7 +158,7 @@
 
     <!-- Start About ALFASUPORTEL-->
 
-    <section class="about-flooring">
+    <section class="section.aboutalfasuportel">
       <div class="row">
         <div class="small-12 large-6 large-offset-3 columns">
           <div class="wd-title-section_c">
@@ -209,12 +207,12 @@
 
     <!-- Start Facts -->
 
-    <section class="facts">
+    <section class="facts1" style="background: #e81130;">
       <div class="row">
         <div class="small-12 large-12 columns">
           <div class="wd-title-section_l">
-            <h2>Fatos interessantes</h2>
-            <h5>Nossos números</h5>
+            <h2>Nossos Produtos</h2>
+            <h6>Nossos números</h5>
           </div>
         </div>
       </div>
@@ -222,7 +220,7 @@
         <div class="small-12 large-3 columns">
           <div class="wd-fucts">
             <div class="number" data-file="1000">1523</div>
-            <div class="title"><span>RESIDENTIAL</span></div>
+            <div class="title"><span>RESIDENCIAL</span></div>
           </div>
         </div>
         <div class="small-12 large-3 columns">
