--- a/item_produto.html
+++ b/item_produto.html
@@ -26,7 +26,7 @@
         <ul class="title-area">
           <li class="name">
             <h1>
-              <a title="alfasuportel" rel="home" href="index.html" pa>
+              <a title="Flooring Company WordPress Theme" rel="home" href="index.html">
                 <img alt="logo" width="auto" height="auto" src="images/logo/logo alfa suportel .png">
               </a>
             </h1>
@@ -35,7 +35,7 @@
             <a href="#"><span>Menu</span></a>
           </li>
         </ul>
-  <section class="creative top-bar-section right">
+        <section class="creative top-bar-section right">
     <div class="menu-main-menu-container">  
       <ul id="menu-main-menu" class="menu">
         <li id="menu-item-1299" class="has-dropdown not-click">
@@ -216,7 +216,7 @@
       <div class="row">
         <h4 class="m-b-15">RELATED PROJECTS</h4>
         <div class="wd-section-project">
-          <ul class="masque portfolio-grid small-block-grid-1	 medium-block-grid-3 large-block-grid-4">
+          <ul class="masque portfolio-grid small-block-grid-1  medium-block-grid-3 large-block-grid-4">
             <li class="flipInX" data-animated="flipInX" style="opacity: 1; animation-delay: 0ms;">
               <div class="wd-project hvr-underline-from-center">
                 <img width="380" height="254" src="http://via.placeholder.com/380x254" class="attachment-flooring_portfolio size-flooring_portfolio wp-post-image" alt="">
