implementação do anjular

--- a/blog-columns.html
+++ b/blog-columns.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br" ng-app="alfasuportel">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -333,5 +333,6 @@
     <script src="js/shortcode/script-shortcodes.js"></script>
     <script src="js/wd_owlcarousel.js"></script>
     <script src="js/scripts.js"></script>
+    <script src="bower_components/angular/angular.js"></script>
   </body>
 </html>
