--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-br" ng-app="alfasuportel">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,6 +18,10 @@
   <link rel="stylesheet" href="stylesheets/sections.css">
   <link rel="stylesheet" href="stylesheets/header.css">
   <link rel="icon" href="images/logo/logo alfa suportel .png" width="140" height="140">
+
+<!--bower_components -->
+  
+  
 
 </head>
 <body>
@@ -514,5 +518,6 @@
   <script src="js/jquery.flexslider-min.js"></script>
   <script src="js/wd_owlcarousel.js"></script>
   <script src="js/scripts.js"></script>
+  <script src="bower_components/angular/angular.js"></script>
 </body>
 </html>
