--- a/item_produto.html
+++ b/item_produto.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-  <title>AlfaSuportel Churrasqueiras Frigideiras Grelhas</title>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800">
-  <link rel="stylesheet" href="stylesheets/owl.carousel.css">
-  <link rel="stylesheet" href="stylesheets/owl.theme.css">
-  <link rel="stylesheet" href="stylesheets/animate.css">
-  <link rel="stylesheet" href="stylesheets/swiper.min.css">
-  <link rel="stylesheet" href="stylesheets/font-awesome/font-awesome.min.css">
-  <link rel="stylesheet" href="stylesheets/app.css">
-  <link rel="stylesheet" href="stylesheets/custom-style.css">
-  <link rel="stylesheet" href="stylesheets/header.css">
-  <link rel="icon" href="images/logo/logo alfa suportel .png" width="140" height="140">
-</head>
+<html lang="pt-br" ng-app="alfasuportel">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+    <title>AlfaSuportel Churrasqueiras Frigideiras Grelhas</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800">
+    <link rel="stylesheet" href="stylesheets/owl.carousel.css">
+    <link rel="stylesheet" href="stylesheets/owl.theme.css">
+    <link rel="stylesheet" href="stylesheets/animate.css">
+    <link rel="stylesheet" href="stylesheets/swiper.min.css">
+    <link rel="stylesheet" href="stylesheets/font-awesome/font-awesome.min.css">
+    <link rel="stylesheet" href="stylesheets/app.css">
+    <link rel="stylesheet" href="stylesheets/custom-style.css">
+    <link rel="stylesheet" href="stylesheets/header.css">
+    <link rel="icon" href="images/logo/logo alfa suportel .png" width="140" height="140">
+    <script src="bower_components/angular/angular.js"></script>
+
+  </head>
 <body>
 
   <!-- Start Header -->
