atualização de links

--- a/categorias.html
+++ b/categorias.html
@@ -18,7 +18,7 @@
     <script src="bower_components/angular/angular.js"></script>
 
   </head>
-  <body ng-controller="categoriasController">
+  <body ng-controller="categorias-controller">
 
     <!-- Start Header -->
 
@@ -45,7 +45,7 @@
                   <ul class="sub-menu dropdown">
                     <li class="title back js-generated"><h5><a href="javascript:void(0)">Voltar</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="#">Catalogo</a></li>
                     <li id="menu-item-1300" class="has-dropdown not-click">
-                      <a href="#" class="has-icon">ALFASUPORTEL</a>
+                      <a href="subcategoria.html" class="has-icon">ALFASUPORTEL</a>
                       <ul class="sub-menu dropdown"><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="#">Estilo I</a></li>
                         <li id="menu-item-1317">
                           <a href="portfolio-columns.html" class="has-icon">Catalogo Colunas</a>
