--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <ul class="sub-menu dropdown">
                   <li class="title back js-generated"><h5><a href="javascript:void(0)">Voltar</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="catalogo.html">Catalogo</a></li>
                   <li id="menu-item-1300" class="has-dropdown not-click">
-                    <a href="categoria.html" class="has-icon">ALFASUPORTEL</a>
+                    <a href="subcategoria.html" class="has-icon">ALFASUPORTEL</a>
                     <ul class="sub-menu dropdown"><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="#">Estilo I</a></li>
                       <li id="menu-item-1316">
                         <a href="categoria.html" class="has-icon">ASPECT II</a>
@@ -88,7 +88,7 @@
           </ul>
         </li>
         <li id="menu-item-1301" class="has-dropdown not-click">
-          <a href="catalogo.html" class="has-icon">FULCAN</a>
+          <a href="subcategoria.html" class="has-icon">FULCAN</a>
           <ul class="sub-menu dropdown">
             <li class="title back js-generated">
               <h5>
